--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HipsterNation</title>
+  <title>Hipster - Nation</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<%= yield %>
-<%= flash[:notice]%>
-<div id="user_nav">
-    <% if user_signed_in? %>
-        Signed in as <%= current_user.email %>
-        <%= link_to 'Sign out', destroy_user_session_path, :method => :delete  %>
-    <% else %>
-        <%= link_to 'Sign in', new_user_session_path %>
-    <% end %>
+	<!--- Header start -->
+  <header>
+    <%= render :partial => "layouts/header" %>
+  </header>
+  <!--- Middle container start -->     
+
+<div class="container">
+  <div class="col-lg-10">
+    <div class="row space">
+      <%= yield%>
+    </div>   
+  </div>      
+            
+            
+    <div class="col-lg-2 space text-center">
+      <div class="space"></div>
+      <div class="ad-space">
+        <h3>AD<br /> Space</h3>
+      </div>
+      <div class="ad-space">
+        <h3>AD<br /> Space</h3>
+      </div>
+      <div class="ad-space">
+        <h3>AD<br /> Space</h3>
+      </div>
+    </div>
+
 </div>
+    
+  <!--- footer start -->
+  
+<footer></footer>
 
 </body>
 </html>
