--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,12 @@
-<div class="col-lg-6 space">
+<a class="btn" style="margin-top :-27px;"><img src="/assets/play-button.jpeg" /></a>
+<div class="col-lg-7 space">
   <div class="row">
     <!--- user comment box start -->
 
-    <div class="col-lg-9">
+    <div class="col-lg-7">
       <div class="user-comment-box">
-          <div class="row text-center space">
-            <div class="col-lg-3"></div>
-                <div class="col-lg-3">
-                  <a href="#"><img alt="" src="/assets/icon/right-icon.png"></a>
-                </div>
-                <div class="col-lg-3">
-                  <a href="#"><img alt="" src="/assets/icon/cancel-icon.png"></a>
-                </div>
-                <div class="col-lg-3"></div>
-              </div>
-              <div class="row space">
+        <div class="row text-center space" id="star"></div>
+        <div class="row space">
                 <div class="widget-box ">
                     <div class="widget-header">
                         <h4 class="lighter smaller"><i class="icon-comment blue"></i>Comment about this look:</h4>
@@ -114,28 +106,28 @@
                 </div>
               </div>
 <!--- user photo column -->
-            <% if user_signed_in? %>
-              <div class="col-lg-3">
+            <%# if user_signed_in? %>
+              <div class="col-lg-5">
                 <%= form_for Photo.new do |f| %>
-                  <div class="fileupload fileupload-new" data-provides="fileupload">
-                    <div class="fileupload-new thumbnail" style="width: 90px; height: 90px;"><img src="http://www.placehold.it/200x150/EFEFEF/AAAAAA&text=no+image" /></div>
-                    <div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 90px; max-height: 90px; line-height: 20px;"></div>
+                  <div class="fileupload fileupload-new gritter" data-provides="fileupload">
+                    <div class="fileupload-new thumbnail" style="width: 245px; height: 175px;"><img src="http://www.placehold.it/200x150/EFEFEF/AAAAAA&text=no+image" /></div>
+                    <div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 245px; max-height: 175px; line-height: 20px;"></div>
                     <div>
                       <span class="btn btn-file btn-warning"><span class="fileupload-new">Select image</span><span class="fileupload-exists">Change</span><%= f.file_field :photo%></span>
+                      <%= f.submit  "Upload", :class => "btn btn-success", :style => "position: relative; left: 48px;" %></p>
                     </div>
                   </div>
-                  <%= f.submit  "Upload", :class => "btn btn-success" %></p>
                 <% end %>
               </div>
-            <%else%>
-                <div class="col-lg-3">
-                  <p><%= link_to ('<strong><u>Sign</u> <u>In</u></strong><br> to post your photo for advise !').html_safe ,new_user_session_path, :class => "btn btn-lg btn-primary col-lg-12 signin_bttn" %></p>
-                    <p><%= link_to ('<strong><u>Sign</u> <u>Up</u></strong><br> (its free !)').html_safe,new_user_registration_path, :class => "btn btn-lg btn-primary col-lg-12 signin_bttn" %></p>
+            <%#else%>
+                <div class="col-lg-5">
+                  <p><%#= link_to ('<strong><u>Sign</u> <u>In</u></strong><br> to post your photo for advise !').html_safe ,new_user_session_path, :class => "btn btn-lg btn-primary col-lg-12 signin_bttn" %></p>
+                    <p><%#= link_to ('<strong><u>Sign</u> <u>Up</u></strong><br> (its free !)').html_safe,new_user_registration_path, :class => "btn btn-lg btn-primary col-lg-12 signin_bttn" %></p>
                 </div>
-            <% end %>
+            <%# end %>
             </div>
           </div>
-          <div class="col-lg-6 space">
+          <div class="col-lg-5 space">
             <div class="image_section text-center">
                 <% if @photo.blank? %>
                   <h4>(Currently No image available)</h4>
@@ -144,4 +136,24 @@
                 <% end %>
               </div>
           </div>
-  
+  <script type="text/javascript">
+    $(document).ready(function () {    
+      <% unless flash[:notice].blank? %>
+        $.gritter.add({
+          title: 'Confirmation',
+          text: '<%= flash[:notice] %>',
+          image: '/assets/confirm.jpg',
+          sticky: false, 
+          time: 8000,
+        });
+      <% end %>
+      
+      $('#star').raty({
+        path     : '/assets', 
+        size     : 67,
+        starHalf : 'star-half-big.png',
+        starOff  : 'star-off-big.png',
+        starOn   : 'star-on-big.png'
+      });
+    });
+  </script>
