--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4">
-      <div class="logo"><a href="#"><img src="/assets/logo.jpg" alt="" /></a></div>
+      <div class="logo"><%= link_to image_tag("/assets/logo.jpg"), root_path%></div>
     </div>
     <div class="col-lg-3 pull-right header_login">
       <div class="row">
