--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,6 +8,7 @@
 header{
 	background-color:#3B5998;
 	width:100%;
+  height: 50%;
 }
 .logo img{
 	width:100%;
@@ -19,7 +20,7 @@ header{
 .image_section{
 	border:#3B5998 solid 5px;
 	min-height:532px;
-  margin-top:-45px;
+  margin-top: -86px;
 }
 .ad-space{
 	border:#3B5998 solid 2px;
