--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,9 @@
       <div class="row">
         <% if user_signed_in? %>
           <div class="col-lg-6">
+            <%= link_to "Upload",new_photo_path, :class => "btn btn-lg btn-success col-lg-12 pull-right"%>
+          </div>
+          <div class="col-lg-6">
             <%= link_to "Sign Out",destroy_user_session_path, method: :delete, :class => "btn btn-lg btn-success col-lg-12 pull-right"%>
           </div>
         <% else %>
@@ -15,6 +18,9 @@
           </div>
           <div class="col-lg-6">
             <%= link_to "Sign Up",new_user_registration_path, :class => "btn btn-lg btn-success col-lg-12 pull-right"%>
+          </div>
+          <div class="col-lg-11 header_login" style="margin-left:10px;">
+            <%= link_to "Upload (Members only)",new_user_registration_path, :class => "btn btn-lg btn-success col-lg-12 pull-right"%>
           </div>
         <% end %>
       </div>
