--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,12 @@
   <!--- Middle container start -->     
 
 <div class="container" style="min-height:500px;">
+  <% unless user_signed_in? %>
+    <div class="col-lg-12"><h1 style="text-align:center;">Want to submit your photo for advise? <%= link_to "Sign Up",new_user_registration_path %> to get started.</h1></div>
+  <% end %>
   <div class="col-lg-12">
     <div class="row space">
       <%= yield%>
-      <%= flash[:notice]%>
-      <%= flash[:error]%>
     </div>   
   </div>      
             
